<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>unipd.ddkk</groupId>
    <artifactId>NonsenseGenerator</artifactId>
    <version>0.1</version>
    <url>https://nonsensegeneratorsite.netlify.app/</url>

    <scm>
        <url>https://github.com/KosumovicDenis/NonsenseGenerator</url>
        <developerConnection>scm:git:ssh://github.com/KosumovicDenis/NonsenseGenerator.git</developerConnection>
    </scm>

    <description>
        NonsenseGenerator is a playful yet creative JavaFX application that constructs quirky and 
        unpredictable sentences using randomized grammatical structures. It is ideal for writers 
        seeking inspiration, developers experimenting with language generation, or anyone looking 
        for a moment of whimsical amusement.

        The application transforms simple text inputs into imaginative output through structured 
        templates, randomized dictionaries, and optionally, syntax trees. Key features include a 
        user-friendly graphical interface, customizable word banks, and a persistent history of 
        generated results.
    </description>

    <developers>
        <developer>
            <name>Denis Kosumovic</name>
            <email>denis.kosumovic@studenti.unipd.it</email>
            <roles>
                <role>developer</role>
                <role>project lead</role>
            </roles>
        </developer>
        <developer>
            <name>Toni Kosumovic</name>
            <email>toni.kosumovic@studenti.unipd.it</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>Davide Fabris</name>
            <email>davide.fabris.8@studenti.unipd.it</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>Davide Rorato</name>
            <email>davide.rorato.1@studenti.unipd.it</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <javafx.version>21.0.7</javafx.version>
        <jacksonDatabind.version>2.19.0</jacksonDatabind.version>
        <junit.jupiter.version>5.9.2</junit.jupiter.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jacksonDatabind.version}</version>
        </dependency>
        <!-- JUnit Jupiter API and Engine for testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- JavaFX plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>unipd.ddkk.Main</mainClass>
                </configuration>
            </plugin>

            <!-- Compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.21.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Surefire plugin for running JUnit 5 tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>

